--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -77,3 +77,8 @@ spring.session.jdbc.cleanup-cron=0 0 4 * * *
 
 #Do not block access to images, JavaScript, and CSS files
 spring.mvc.static-path-pattern=/resoures/static/**
+
+#Micrometer Prometheus registry settings
+management.metrics.export.prometheus.enabled=true
+management.endpoints.web.exposure.include=prometheus
+management.endpoint.metrics.enabled=true
