--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,17 @@
 			<version>3.12.10</version>
 		</dependency>
 		
+    <dependency>
+        <groupId>io.micrometer</groupId>
+        <artifactId>micrometer-core</artifactId>
+        <version>1.8.1</version> 
+    </dependency>
+    <dependency>
+        <groupId>io.micrometer</groupId>
+        <artifactId>micrometer-registry-prometheus</artifactId>
+        <version>1.8.1</version> 
+    </dependency>
+		
 	</dependencies>
 
 	<build>
